# vtclock

./: AUTHORS  LICENSE  Makefile  Makefile.in  README.md  config.status  configure  configure.in  vtclock  vtclock-old  vtclock.c
.deps/: vtclock.Po
.svn/: dir-prop-base  dir-wcprops  entries
.svn/text-base/: Makeconfig.svn-base  Makefile.am.svn-base  vtclock.c.svn-base  vtclock.xml.svn-base
.svn/wcprops/: AUTHORS.svn-work  COPYING.svn-work  ChangeLog.svn-work  INSTALL.svn-work  LICENSE.svn-work  Makeconfig.svn-work  Makefile.am.svn-work  NEWS.svn-work  README.svn-work  configure.in.svn-work  vtclock.c.svn-work  vtclock.xml.svn-work
autom4te.cache/: output.0  traces.0  traces.1
fonts/: banner.fnt  digital.fnt  huge.fnt  hugehollow.fnt  script.fnt  shadow.fnt  slant.fnt  small.fnt  term.fnt
fonts/.svn/: dir-wcprops  entries
fonts/.svn/text-base/: big.fnt.svn-base  block.fnt.svn-base  bubble.fnt.svn-base  lean.fnt.svn-base  mini.fnt.svn-base  mnemonic.fnt.svn-base  smscript.fnt.svn-base  smshadow.fnt.svn-base  smslant.fnt.svn-base  standard.fnt.svn-base
fonts/.svn/wcprops/: banner.fnt.svn-work  big.fnt.svn-work  block.fnt.svn-work  bubble.fnt.svn-work  digital.fnt.svn-work  huge.fnt.svn-work  hugehollow.fnt.svn-work  lean.fnt.svn-work  mini.fnt.svn-work  mnemonic.fnt.svn-work  script.fnt.svn-work  shadow.fnt.svn-work  slant.fnt.svn-work  small.fnt.svn-work  smscript.fnt.svn-work  smshadow.fnt.svn-work  smslant.fnt.svn-work  standard.fnt.svn-work  term.fnt.svn-work
