#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT(vtclock.c)
AM_INIT_AUTOMAKE(vtclock, [0.0.1])

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

# Checks for libraries.
AC_CHECK_LIB(ncurses, initscr, , AC_MSG_ERROR(NCurses is required))
NCURSES_LIBS=-lncurses
AC_SUBST(NCURSES_LIBS)
PKG_CHECK_MODULES(DEPS, libxml-2.0)
AC_SUBST(DEPS_CFLAGS)
AC_SUBST(DEPS_LIBS)

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(ncurses.h, , AC_MSG_ERROR(Missing ncurses.h))

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T
AC_STRUCT_TM

# Checks for library functions.
AC_FUNC_STRFTIME
AC_CHECK_FUNCS([memset], , AC_MSG_ERROR(Missing function memset))

AC_CONFIG_FILES([Makefile])
AC_OUTPUT

